compiler/tools/fpp-check/test/enum_bad_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/enum_bad_type.fpp: 2.9
enum E: A { X = 1 }
        ^
error: primitive integer type required
